@@ -12,6 +12,7 @@ You can now teleport.
 * Added a setting to disable teleporting temporarily.
 * You also have a faint shadow now.
 Panels now have tooltips.
+Added dust particles.
 
 [2021.06.03]
 Implemented saving and loading ruleset bindings.
